--- a/Rock_Scissor_Paper_Project.ipynb
+++ b/Rock_Scissor_Paper_Project.ipynb
@@ -53,7 +53,7 @@
     "    \n",
     "Some machine learning algorithm requires input dataset to predict the output. The training and testing data for this project will be image files and collected by 1. directly taking pictures and 2. downloading from other resources. First, visual or audible project resources such as image, video, or pose can be trained on the website provided by [Teachable Machine](https://teachablemachine.withgoogle.com/). 300 pictures had been taken in total for each handsign with the laptop webcam equipped.   \n",
     "   \n",
-    "![image.png](attachment:image.png)\n",
+    "![1](./The-very-first-repository/taking_pictures.png)\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; *Figure 1: Taking pictures of rocks on Teachable Machine*   \n",
     "\n",
     "Figure 1 shows how the service took pictures rapidly.\n",
