--- a/Rock_Scissor_Paper_Project.ipynb
+++ b/Rock_Scissor_Paper_Project.ipynb
@@ -113,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image.png](attachment:image.png)\n",
+    "![2](./output1.png)\n"",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; *Figure 2: Resized rock images*\n",
     "\n",
     "### Retrieving datasets\n",
@@ -329,7 +329,7 @@
    "source": [
     "## 3. Result\n",
     "\n",
-    "![image.png](attachment:image.png)\n",
+    "![3](./output3.png)\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; *Figure 4: First output*   \n",
     "As can be seen in figure 4, the model with initial conditions produce poor accuracy. Accordingly, two measures were taken to increase the accuracy.   \n",
     "- 1360 more Training image was added to each, 4080 in total.\n",
@@ -347,7 +347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image.png](attachment:image.png)\n",
+    "![4](./output2.png)\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; *Figure 5: Second output*\n",
     "\n",
     "Figure 5 represents better accuracy with additional images and the same hyperparameters."
