--- a/Rock_Scissor_Paper_Project.ipynb
+++ b/Rock_Scissor_Paper_Project.ipynb
@@ -193,7 +193,7 @@
    "source": [
     "which outputs\n",
     "\n",
-    "![image.png](attachment:image.png)\n",
+    "![2](./output2.png)\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; *Figure 3: Output checking*\n",
     "\n"
    ]
