--- a/Rock_Scissor_Paper_Project.ipynb
+++ b/Rock_Scissor_Paper_Project.ipynb
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![2](./output1.png)\n",
+    "![2](./rocks.png)\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; *Figure 2: Resized rock images*\n",
     "\n",
     "### Retrieving datasets\n",
