--- a/Rock_Scissor_Paper_Project.ipynb
+++ b/Rock_Scissor_Paper_Project.ipynb
@@ -184,7 +184,7 @@
    "source": [
     "which outputs\n",
     "\n",
-    "![3](./output1)\n",
+    "![3](./output1.png)\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; *Figure 3: Output checking*\n",
     "\n"
    ]
