--- a/News_crawling_and_classification/News_crawling_and_classification_project.ipynb
+++ b/News_crawling_and_classification/News_crawling_and_classification_project.ipynb
@@ -15,6 +15,13 @@
     "&nbsp;&nbsp;&nbsp;**5.Discussion and conclusion**   \n",
     "&nbsp;&nbsp;&nbsp;**6.Reference**"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Aims and objectives"
+   ]
   }
  ],
  "metadata": {
