--- a/News_crawling_and_classification/Full_code.ipynb
+++ b/News_crawling_and_classification/Full_code.ipynb
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -279,53 +279,53 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>네이버 스포츠가 ‘2020 KBO 국내프로야구 리그’ 영상 서비스에 자체 영상 분석...</td>\n",
-       "      <td>IT/Science</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>안성 산사태 피해지역 조사하는 산림청 직원들\\n\\n[산림청 제공. 재판매 및 DB ...</td>\n",
+       "      <th>843</th>\n",
+       "      <td>서울뉴시스 박미소 기자  생활 속 거리두기생활방역로 방역지침 수준을 완화한 첫날인 ...</td>\n",
        "      <td>Society</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>정세균 국무총리와 조명래 환경부 장관이 2일 오후 서울 동작구 한강홍수통제소 상황실...</td>\n",
+       "      <th>3450</th>\n",
+       "      <td>유유제약서울경제이 서울 잠실야구장 루 그라운드에 회사 이미지와 이름을 그려 넣는 광...</td>\n",
+       "      <td>Lifestyle/Culture</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4661</th>\n",
+       "      <td>대구산업통상자원부가 공모한 스마트 특성화 기반 구축 사업에 경북에서는 구미와 경주...</td>\n",
        "      <td>IT/Science</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>기독교 국제개발협력 단체 ‘캠프’(대표 이철용 목사)가 필리핀 톤도, 나보타스 등 ...</td>\n",
+       "      <th>4333</th>\n",
+       "      <td>액션스퀘어로 이적한 고세준좌 백두산우 액션스퀘어로 이적한 고세준좌 백두산우  전자신...</td>\n",
+       "      <td>IT/Science</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3592</th>\n",
+       "      <td>스트레칭을 하다 보면 다리찢기에 대한 욕심이 생긴다 효능은 알려진 대로다 틀어진 척...</td>\n",
        "      <td>Lifestyle/Culture</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>기아자동차가 신형 카니발 출시를 기념해 아이들을 위한 이색 사회공헌 활동을 펼친다....</td>\n",
+       "      <th>2545</th>\n",
+       "      <td>사진연합뉴스 사진연합뉴스사진 사진미국 액상형 전자담배 브랜드 쥴을 운영하던 쥴랩스코...</td>\n",
        "      <td>Lifestyle/Culture</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>시민들이 지난달 11일 오전 서울 중구 태평로 시청 앞 서울광장에 마련된 고(故) ...</td>\n",
+       "      <th>1136</th>\n",
+       "      <td>일 재개장한 달서별빛캠프 캠핑장 전경 달서구청 제공 일 재개장한 달서별빛캠프 캠핑장...</td>\n",
        "      <td>Society</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>[워싱턴=AP/뉴시스]도널드 트럼프 미국 대통령이 31일(현지시간) 백악관 사우스론...</td>\n",
-       "      <td>IT/Science</td>\n",
+       "      <th>1912</th>\n",
+       "      <td>아시아경제 호남취재본부 윤자민 기자 마재윤 전남소방본부장이 화재 취약대상 및 산불 ...</td>\n",
+       "      <td>Society</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>삼성SDS\\n\\n(지디넷코리아=남혁우 기자)삼성SDS(대표 홍원표)와 NHN(대표 ...</td>\n",
-       "      <td>IT/Science</td>\n",
+       "      <th>2825</th>\n",
+       "      <td>이데일리 방인권 기자 롯데백화점이 일 오전 서울 중구 소공동 롯데백화점 본점에서 달...</td>\n",
+       "      <td>Lifestyle/Culture</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>/사진=과학기술정보통신부 /사진=과학기술정보통신부\\n\\n과학기술정보통신부(이하 과기...</td>\n",
-       "      <td>IT/Science</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>2일 오후 서울 서초구 반포동 잠수교에서 경찰과 서울시 관계자들이 한강 수위 상승으...</td>\n",
+       "      <th>698</th>\n",
+       "      <td>앵커명의 사망자를 낸 이천 물류창고 공사현장 화재 현장에서 세 번째 정부 합동 감식...</td>\n",
        "      <td>Society</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -333,20 +333,20 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                 news               code\n",
-       "13  네이버 스포츠가 ‘2020 KBO 국내프로야구 리그’ 영상 서비스에 자체 영상 분석...         IT/Science\n",
-       "16  안성 산사태 피해지역 조사하는 산림청 직원들\\n\\n[산림청 제공. 재판매 및 DB ...            Society\n",
-       "1   정세균 국무총리와 조명래 환경부 장관이 2일 오후 서울 동작구 한강홍수통제소 상황실...         IT/Science\n",
-       "1   기독교 국제개발협력 단체 ‘캠프’(대표 이철용 목사)가 필리핀 톤도, 나보타스 등 ...  Lifestyle/Culture\n",
-       "15  기아자동차가 신형 카니발 출시를 기념해 아이들을 위한 이색 사회공헌 활동을 펼친다....  Lifestyle/Culture\n",
-       "11  시민들이 지난달 11일 오전 서울 중구 태평로 시청 앞 서울광장에 마련된 고(故) ...            Society\n",
-       "10  [워싱턴=AP/뉴시스]도널드 트럼프 미국 대통령이 31일(현지시간) 백악관 사우스론...         IT/Science\n",
-       "2   삼성SDS\\n\\n(지디넷코리아=남혁우 기자)삼성SDS(대표 홍원표)와 NHN(대표 ...         IT/Science\n",
-       "8   /사진=과학기술정보통신부 /사진=과학기술정보통신부\\n\\n과학기술정보통신부(이하 과기...         IT/Science\n",
-       "13  2일 오후 서울 서초구 반포동 잠수교에서 경찰과 서울시 관계자들이 한강 수위 상승으...            Society"
+       "                                                   news               code\n",
+       "843   서울뉴시스 박미소 기자  생활 속 거리두기생활방역로 방역지침 수준을 완화한 첫날인 ...            Society\n",
+       "3450  유유제약서울경제이 서울 잠실야구장 루 그라운드에 회사 이미지와 이름을 그려 넣는 광...  Lifestyle/Culture\n",
+       "4661   대구산업통상자원부가 공모한 스마트 특성화 기반 구축 사업에 경북에서는 구미와 경주...         IT/Science\n",
+       "4333  액션스퀘어로 이적한 고세준좌 백두산우 액션스퀘어로 이적한 고세준좌 백두산우  전자신...         IT/Science\n",
+       "3592  스트레칭을 하다 보면 다리찢기에 대한 욕심이 생긴다 효능은 알려진 대로다 틀어진 척...  Lifestyle/Culture\n",
+       "2545  사진연합뉴스 사진연합뉴스사진 사진미국 액상형 전자담배 브랜드 쥴을 운영하던 쥴랩스코...  Lifestyle/Culture\n",
+       "1136  일 재개장한 달서별빛캠프 캠핑장 전경 달서구청 제공 일 재개장한 달서별빛캠프 캠핑장...            Society\n",
+       "1912  아시아경제 호남취재본부 윤자민 기자 마재윤 전남소방본부장이 화재 취약대상 및 산불 ...            Society\n",
+       "2825  이데일리 방인권 기자 롯데백화점이 일 오전 서울 중구 소공동 롯데백화점 본점에서 달...  Lifestyle/Culture\n",
+       "698   앵커명의 사망자를 낸 이천 물류창고 공사현장 화재 현장에서 세 번째 정부 합동 감식...            Society"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,17 +617,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 60,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "text_data = preprocessing(df['news'])\n",
-    "print(text_data[18])"
+    "#print(text_data[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,9 +652,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of news for training : 3195\n",
+      "Number of news for testing :  799\n",
+      "Number of labels for training :  3195\n",
+      "Number of labels for testing :  799\n"
+     ]
+    }
+   ],
    "source": [
     "print('Number of news for training :', len(X_train))\n",
     "print('Number of news for testing : ', len(X_test))\n",
@@ -662,19 +675,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3195, 26838)\n",
+      "  (0, 26646)\t0.059640431247834254\n",
+      "  (0, 26471)\t0.09166921289410415\n",
+      "  (0, 26383)\t0.053765063905626284\n",
+      "  (0, 26368)\t0.04013968635157613\n",
+      "  (0, 26306)\t0.038085982816089214\n",
+      "  (0, 25728)\t0.12104970371705405\n",
+      "  (0, 25586)\t0.07056314781650644\n",
+      "  (0, 25573)\t0.044539279522087916\n",
+      "  (0, 25363)\t0.04007540222498938\n",
+      "  (0, 25183)\t0.07158553044779477\n",
+      "  (0, 25103)\t0.04362550153275062\n",
+      "  (0, 24552)\t0.0641962296046239\n",
+      "  (0, 23961)\t0.08874292274069209\n",
+      "  (0, 23017)\t0.02504218905961791\n",
+      "  (0, 22403)\t0.0390875331386856\n",
+      "  (0, 22134)\t0.052799723276252736\n",
+      "  (0, 21942)\t0.07571748299080505\n",
+      "  (0, 21442)\t0.059640431247834254\n",
+      "  (0, 21352)\t0.053674309664089585\n",
+      "  (0, 21180)\t0.09891416547781748\n",
+      "  (0, 21174)\t0.09957819768286276\n",
+      "  (0, 21107)\t0.13114847698195087\n",
+      "  (0, 21007)\t0.03867768929696792\n",
+      "  (0, 21000)\t0.057446893080468714\n",
+      "  (0, 20770)\t0.04978909884143138\n",
+      "  :\t:\n",
+      "  (0, 5523)\t0.08032569223605264\n",
+      "  (0, 5509)\t0.09544185705509728\n",
+      "  (0, 5323)\t0.02644994589129344\n",
+      "  (0, 5008)\t0.05815933797306284\n",
+      "  (0, 4932)\t0.07231426989512893\n",
+      "  (0, 4692)\t0.16186368191026118\n",
+      "  (0, 4638)\t0.05815933797306284\n",
+      "  (0, 4523)\t0.04869294803239793\n",
+      "  (0, 4522)\t0.05562068004758951\n",
+      "  (0, 3160)\t0.07701177711477411\n",
+      "  (0, 3088)\t0.25755715354833797\n",
+      "  (0, 2505)\t0.08178429804793086\n",
+      "  (0, 2501)\t0.07965303527859927\n",
+      "  (0, 2010)\t0.05935840025834468\n",
+      "  (0, 1984)\t0.08257932543201134\n",
+      "  (0, 1739)\t0.053142590794838324\n",
+      "  (0, 1295)\t0.0324064530619788\n",
+      "  (0, 1269)\t0.07266972147493349\n",
+      "  (0, 831)\t0.2591948354326917\n",
+      "  (0, 726)\t0.048508674243022125\n",
+      "  (0, 643)\t0.08650513656277926\n",
+      "  (0, 476)\t0.14426553666752828\n",
+      "  (0, 213)\t0.040400021165204116\n",
+      "  (0, 82)\t0.037336411060063114\n",
+      "  (0, 45)\t0.17989079361229413\n"
+     ]
+    }
+   ],
    "source": [
     "#- Count vectoriser which counts the number of words.(Like TF)\n",
     "count_vect = CountVectorizer()\n",
     "X_train_counts = count_vect.fit_transform(X_train)\n",
     "#print(X_train_counts)\n",
-    "print(X_train_counts.shape)\n",
+    "#print(X_train_counts.shape)\n",
     "\n",
     "#- Receive TF-IDF from the result of count vectoriser.\n",
+    "tfidf_transformer = TfidfTransformer()\n",
     "X_train_tfidf = tfidf_transformer.fit_transform(X_train_counts)\n",
+    "print(X_train_tfidf.shape)\n",
     "print(X_train_tfidf)\n",
+    "\n",
     "\n",
     "#- Execute Naive bayes classifier.\n",
     "#- X_train : TF-IDF vector, y_train : label.\n",
@@ -684,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,9 +772,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Society']\n"
+     ]
+    }
+   ],
    "source": [
     "new_sent = preprocessing([\"민주당 일각에서 법사위의 체계·자구 심사 기능을 없애야 한다는 \\\n",
     "                           주장이 나오는 데 대해 “체계·자구 심사가 법안 지연의 수단으로 \\\n",
@@ -711,9 +794,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Lifestyle/Culture']\n"
+     ]
+    }
+   ],
    "source": [
     "new_sent = preprocessing([\"인도 로맨틱 코미디 영화 <까립까립 싱글>(2017)을 봤을 때 나는 두 눈을 의심했다. \\\n",
     "                          저 사람이 남자 주인공이라고? 노안에 가까운 이목구비와 기름때로 뭉친 파마머리와, \\\n",
@@ -727,9 +818,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['IT/Science']\n"
+     ]
+    }
+   ],
    "source": [
     "new_sent = preprocessing([\"20분기 연속으로 적자에 시달리는 LG전자가 브랜드 이름부터 성능, 디자인까지 대대적인 변화를 \\\n",
     "                          적용한 LG 벨벳은 등장 전부터 온라인 커뮤니티를 뜨겁게 달궜다. 사용자들은 “디자인이 예쁘다”, \\\n",
@@ -739,11 +838,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   precision    recall  f1-score   support\n",
+      "\n",
+      "       IT/Science       0.93      0.75      0.83       186\n",
+      "Lifestyle/Culture       0.81      0.79      0.80       264\n",
+      "          Society       0.81      0.91      0.86       349\n",
+      "\n",
+      "         accuracy                           0.83       799\n",
+      "        macro avg       0.85      0.82      0.83       799\n",
+      "     weighted avg       0.84      0.83      0.83       799\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "y_pred = clf.predict(tfidf_vectorizer(X_test))\n",
     "print(metrics.classification_report(y_test, y_pred))"
