--- a/News_crawling_and_classification/Full_code.ipynb
+++ b/News_crawling_and_classification/Full_code.ipynb
@@ -2,61 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import libraries and packages\n",
     "import requests\n",
     "import pandas as pd\n",
+    "import os\n",
     "from bs4 import BeautifulSoup\n",
-    "\n",
-    "# Takes page number, category, and date as input. \n",
-    "# 100 : Politics, 101 :Economics, 102' : 'Society, 103: Lifestyle/Culture, 104 : Worldwise, 105 : IT/Science, 110 : Opinion\n",
-    "\n",
-    "def make_urllist(page_num, code, date): \n",
-    "  urllist= []\n",
-    "  for i in range(1, page_num + 1):\n",
-    "    url = 'https://news.naver.com/main/list.nhn?mode=LSD&mid=sec&sid1='+str(code)+'&date='+str(date)+'&page='+str(i)   \n",
-    "    news = requests.get(url)\n",
-    "\n",
-    "    # Create BeautifulSoup instance with html.parser.\n",
-    "    soup = BeautifulSoup(news.content, 'html.parser')\n",
-    "\n",
-    "    # CASE 1\n",
-    "    news_list = soup.select('.newsflash_body .type06_headline li dl')\n",
-    "    # CASE 2\n",
-    "    news_list.extend(soup.select('.newsflash_body .type06 li dl'))\n",
-    "        \n",
-    "    # Retrieve address from <a href ='address'> \n",
-    "    for line in news_list:\n",
-    "        urllist.append(line.a.get('href'))\n",
-    "  return urllist"
+    "from newspaper import Article\n",
+    "from konlpy.tag import Hannanum,Kkma,Komoran,Mecab,Okt\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn import metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of news:  60\n"
-     ]
-    }
-   ],
-   "source": [
-    "url_list = make_urllist(3, 105, 20200802)\n",
-    "print('Number of news: ',len(url_list))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,116 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>news</th>\n",
-       "      <th>code</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>\\n\\n8월초, 본격적인 여름 휴가철이 시작됐지만 중부지방을 중심으로 수해 피해가 ...</td>\n",
-       "      <td>IT/Science</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>정세균 국무총리와 조명래 환경부 장관이 2일 오후 서울 동작구 한강홍수통제소 상황실...</td>\n",
-       "      <td>IT/Science</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>삼성SDS\\n\\n(지디넷코리아=남혁우 기자)삼성SDS(대표 홍원표)와 NHN(대표 ...</td>\n",
-       "      <td>IT/Science</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>[경향신문]SK텔레콤의 외국인 직원들이 서울 명동 T월드 매장 앞에서 SK텔레콤이 ...</td>\n",
-       "      <td>IT/Science</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>[한국경제TV 이영호 기자]\\n\\n미국의 정보통신(IT) 기업 애플이 세계에서 가장...</td>\n",
-       "      <td>IT/Science</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>민간우주기업 버진 갤럭틱이 공개한 ‘우주여객기’ 내부 이미지. 민간우주기업 버진 갤...</td>\n",
-       "      <td>IT/Science</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>[경향신문]코로나19 확산으로 인한 ‘사회적 거리두기’에 돌입한 지도 반년이 됐다....</td>\n",
-       "      <td>IT/Science</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>미국항공우주국(NASA)의 화성 지상탐사용 로버 ‘퍼서비어런스’ 활동모습 상상도. ...</td>\n",
-       "      <td>IT/Science</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>/사진=과학기술정보통신부 /사진=과학기술정보통신부\\n\\n과학기술정보통신부(이하 과기...</td>\n",
-       "      <td>IT/Science</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>/사진=우정사업본부 페이스북 갈무리 /사진=우정사업본부 페이스북 갈무리\\n\\n우체국...</td>\n",
-       "      <td>IT/Science</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                news        code\n",
-       "0  \\n\\n8월초, 본격적인 여름 휴가철이 시작됐지만 중부지방을 중심으로 수해 피해가 ...  IT/Science\n",
-       "1  정세균 국무총리와 조명래 환경부 장관이 2일 오후 서울 동작구 한강홍수통제소 상황실...  IT/Science\n",
-       "2  삼성SDS\\n\\n(지디넷코리아=남혁우 기자)삼성SDS(대표 홍원표)와 NHN(대표 ...  IT/Science\n",
-       "3  [경향신문]SK텔레콤의 외국인 직원들이 서울 명동 T월드 매장 앞에서 SK텔레콤이 ...  IT/Science\n",
-       "4  [한국경제TV 이영호 기자]\\n\\n미국의 정보통신(IT) 기업 애플이 세계에서 가장...  IT/Science\n",
-       "5  민간우주기업 버진 갤럭틱이 공개한 ‘우주여객기’ 내부 이미지. 민간우주기업 버진 갤...  IT/Science\n",
-       "6  [경향신문]코로나19 확산으로 인한 ‘사회적 거리두기’에 돌입한 지도 반년이 됐다....  IT/Science\n",
-       "7  미국항공우주국(NASA)의 화성 지상탐사용 로버 ‘퍼서비어런스’ 활동모습 상상도. ...  IT/Science\n",
-       "8  /사진=과학기술정보통신부 /사진=과학기술정보통신부\\n\\n과학기술정보통신부(이하 과기...  IT/Science\n",
-       "9  /사진=우정사업본부 페이스북 갈무리 /사진=우정사업본부 페이스북 갈무리\\n\\n우체국...  IT/Science"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data = make_data(url_list, 105)\n",
-    "data[:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,156 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def make_total_data(page_num, code_list, date):\n",
-    "  df = None\n",
-    "\n",
-    "  for code in code_list:\n",
-    "    url_list = make_urllist(page_num, code, date)\n",
-    "    df_temp = make_data(url_list, code)\n",
-    "    print('Code '+str(code)+' is processed to data')\n",
-    "\n",
-    "    if df is not None:\n",
-    "      df = pd.concat([df, df_temp])\n",
-    "    else:\n",
-    "      df = df_temp\n",
-    "\n",
-    "  return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Code 102 is processed to data\n",
-      "Code 103 is processed to data\n",
-      "Code 105 is processed to data\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = make_total_data(1, code_list, 20200802) # 20 news per page, so 60 news in total."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>news</th>\n",
-       "      <th>code</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>843</th>\n",
-       "      <td>서울뉴시스 박미소 기자  생활 속 거리두기생활방역로 방역지침 수준을 완화한 첫날인 ...</td>\n",
-       "      <td>Society</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3450</th>\n",
-       "      <td>유유제약서울경제이 서울 잠실야구장 루 그라운드에 회사 이미지와 이름을 그려 넣는 광...</td>\n",
-       "      <td>Lifestyle/Culture</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4661</th>\n",
-       "      <td>대구산업통상자원부가 공모한 스마트 특성화 기반 구축 사업에 경북에서는 구미와 경주...</td>\n",
-       "      <td>IT/Science</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4333</th>\n",
-       "      <td>액션스퀘어로 이적한 고세준좌 백두산우 액션스퀘어로 이적한 고세준좌 백두산우  전자신...</td>\n",
-       "      <td>IT/Science</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3592</th>\n",
-       "      <td>스트레칭을 하다 보면 다리찢기에 대한 욕심이 생긴다 효능은 알려진 대로다 틀어진 척...</td>\n",
-       "      <td>Lifestyle/Culture</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2545</th>\n",
-       "      <td>사진연합뉴스 사진연합뉴스사진 사진미국 액상형 전자담배 브랜드 쥴을 운영하던 쥴랩스코...</td>\n",
-       "      <td>Lifestyle/Culture</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1136</th>\n",
-       "      <td>일 재개장한 달서별빛캠프 캠핑장 전경 달서구청 제공 일 재개장한 달서별빛캠프 캠핑장...</td>\n",
-       "      <td>Society</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1912</th>\n",
-       "      <td>아시아경제 호남취재본부 윤자민 기자 마재윤 전남소방본부장이 화재 취약대상 및 산불 ...</td>\n",
-       "      <td>Society</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2825</th>\n",
-       "      <td>이데일리 방인권 기자 롯데백화점이 일 오전 서울 중구 소공동 롯데백화점 본점에서 달...</td>\n",
-       "      <td>Lifestyle/Culture</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>698</th>\n",
-       "      <td>앵커명의 사망자를 낸 이천 물류창고 공사현장 화재 현장에서 세 번째 정부 합동 감식...</td>\n",
-       "      <td>Society</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                   news               code\n",
-       "843   서울뉴시스 박미소 기자  생활 속 거리두기생활방역로 방역지침 수준을 완화한 첫날인 ...            Society\n",
-       "3450  유유제약서울경제이 서울 잠실야구장 루 그라운드에 회사 이미지와 이름을 그려 넣는 광...  Lifestyle/Culture\n",
-       "4661   대구산업통상자원부가 공모한 스마트 특성화 기반 구축 사업에 경북에서는 구미와 경주...         IT/Science\n",
-       "4333  액션스퀘어로 이적한 고세준좌 백두산우 액션스퀘어로 이적한 고세준좌 백두산우  전자신...         IT/Science\n",
-       "3592  스트레칭을 하다 보면 다리찢기에 대한 욕심이 생긴다 효능은 알려진 대로다 틀어진 척...  Lifestyle/Culture\n",
-       "2545  사진연합뉴스 사진연합뉴스사진 사진미국 액상형 전자담배 브랜드 쥴을 운영하던 쥴랩스코...  Lifestyle/Culture\n",
-       "1136  일 재개장한 달서별빛캠프 캠핑장 전경 달서구청 제공 일 재개장한 달서별빛캠프 캠핑장...            Society\n",
-       "1912  아시아경제 호남취재본부 윤자민 기자 마재윤 전남소방본부장이 화재 취약대상 및 산불 ...            Society\n",
-       "2825  이데일리 방인권 기자 롯데백화점이 일 오전 서울 중구 소공동 롯데백화점 본점에서 달...  Lifestyle/Culture\n",
-       "698   앵커명의 사망자를 낸 이천 물류창고 공사현장 화재 현장에서 세 번째 정부 합동 감식...            Society"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.sample(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +161,7 @@
        "5123  이미지제공=게티이미지뱅크 이미지제공=게티이미지뱅크\\n\\n[Copyright ⓒ 전자...  IT/Science"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -525,10 +232,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fad9b6d7ad0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd5789d9890>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -551,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
