--- a/News_crawling_and_classification/News_crawling_and_classification_project.ipynb
+++ b/News_crawling_and_classification/News_crawling_and_classification_project.ipynb
@@ -80,11 +80,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data preparation   \n",
+    "----   "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Takes page number, category, and date as input. \n",
+    "# 100 : Politics, 101 :Economics, 102' : 'Society, 103: Lifestyle/Culture, 104 : Worldwise, 105 : IT/Science, 110 : Opinion\n",
+    "\n",
+    "def make_urllist(page_num, code, date): \n",
+    "  urllist= []\n",
+    "  for i in range(1, page_num + 1):\n",
+    "    url = 'https://news.naver.com/main/list.nhn?mode=LSD&mid=sec&sid1='+str(code)+'&date='+str(date)+'&page='+str(i)   \n",
+    "    news = requests.get(url)\n",
+    "\n",
+    "    # Create BeautifulSoup instance with html.parser.\n",
+    "    soup = BeautifulSoup(news.content, 'html.parser')\n",
+    "\n",
+    "    # CASE 1\n",
+    "    news_list = soup.select('.newsflash_body .type06_headline li dl')\n",
+    "    # CASE 2\n",
+    "    news_list.extend(soup.select('.newsflash_body .type06 li dl'))\n",
+    "        \n",
+    "    # Retrieve address from <a href ='address'> \n",
+    "    for line in news_list:\n",
+    "        urllist.append(line.a.get('href'))\n",
+    "  return urllist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is a function that generates dataframe.\n",
+    "def make_data(urllist, code):\n",
+    "  text_list = []\n",
+    "  for url in urllist:\n",
+    "    article = Article(url, language='ko')\n",
+    "    article.download()\n",
+    "    article.parse()\n",
+    "    text_list.append(article.text)\n",
+    "\n",
+    "  #- Set values to the text under the key 'news' in the dataframe.\n",
+    "  df = pd.DataFrame({'news': text_list})\n",
+    "\n",
+    "  #- Put category names under the key 'code' in the dataframe.\n",
+    "  df['code'] = idx2word[str(code)]\n",
+    "  return df"
+   ]
   },
   {
    "cell_type": "markdown",
