--- a/News_crawling_and_classification/Code_final.ipynb
+++ b/News_crawling_and_classification/Code_final.ipynb
@@ -1,6 +1,49 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# News crawling and classification project   \n",
+    "   \n",
+    "## Contents      \n",
+    "\n",
+    "&nbsp;&nbsp;&nbsp;**[1. Aims and objectives](#1.-Aims-and-objectives)**   \n",
+    "&nbsp;&nbsp;&nbsp;**[2. Literature review](#2.-Literature-review)**   \n",
+    "&nbsp;&nbsp;&nbsp;**[3. Method](#3.-Method)**   \n",
+    "&nbsp;&nbsp;&nbsp;**[4. Result](#4.-Result)**   \n",
+    "&nbsp;&nbsp;&nbsp;**[5. Discussion and conclusion](#5.-Discussion-and-conclusion)**   \n",
+    "&nbsp;&nbsp;&nbsp;**[6. Reference](#6.-Reference)**   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Aims and objectives   \n",
+    "<br/>\n",
+    "This project focuses on "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Literature review"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Method   \n",
+    "\n",
+    "### Import machineries   \n",
+    "   \n",
+    "The following import all modules, libraries, and packages which will be used afterwords."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
@@ -20,32 +63,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Takes page number, category, and date as input. \n",
-    "# 100 : Politics, 101 :Economics, 102' : 'Society, 103: Lifestyle/Culture, 104 : Worldwise, 105 : IT/Science, 110 : Opinion\n",
-    "\n",
-    "def make_urllist(page_num, code, date): \n",
-    "  urllist= []\n",
-    "  for i in range(1, page_num + 1):\n",
-    "    url = 'https://news.naver.com/main/list.nhn?mode=LSD&mid=sec&sid1='+str(code)+'&date='+str(date)+'&page='+str(i)   \n",
-    "    news = requests.get(url)\n",
-    "\n",
-    "    # Create BeautifulSoup instance with html.parser.\n",
-    "    soup = BeautifulSoup(news.content, 'html.parser')\n",
-    "\n",
-    "    # CASE 1\n",
-    "    news_list = soup.select('.newsflash_body .type06_headline li dl')\n",
-    "    # CASE 2\n",
-    "    news_list.extend(soup.select('.newsflash_body .type06 li dl'))\n",
-    "        \n",
-    "    # Retrieve address from <a href ='address'> \n",
-    "    for line in news_list:\n",
-    "        urllist.append(line.a.get('href'))\n",
-    "  return urllist"
+    "### Data preparation   \n",
+    "----   \n",
+    "Three categories of 100 pages News data which were uploaded on 6th Jul 2020 were crawled on Naver webpage. Approximated 5200 samples were obtained and each category is labelled with numbers (102 : Society, 103: Lifestyle/Culture, 105 : IT/Science)."
    ]
   },
   {
@@ -83,47 +106,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def make_total_data(page_num, code_list, date):\n",
-    "  df = None\n",
-    "\n",
-    "  for code in code_list:\n",
-    "    url_list = make_urllist(page_num, code, date)\n",
-    "    df_temp = make_data(url_list, code)\n",
-    "    print('Code '+str(code)+' is processed to data')\n",
-    "\n",
-    "    if df is not None:\n",
-    "      df = pd.concat([df, df_temp])\n",
-    "    else:\n",
-    "      df = df_temp\n",
-    "\n",
-    "  return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Code 102 is processed to data\n",
-      "Code 103 is processed to data\n",
-      "Code 105 is processed to data\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = make_total_data(1, code_list, 20200802) # 20 news per page, so 60 news in total."
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
    "outputs": [
@@ -154,12 +136,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Other characters apart from Korean letters had been removed."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "df['news'] = df['news'].str.replace(\"[^ㄱ-ㅎㅏ-ㅣ가-힣 ]\",\"\") # Remove characters other than Korean using regular expression. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Whether there are any null data or duplicated samples was checked and handled accordingly."
    ]
   },
   {
@@ -232,6 +228,15 @@
    "source": [
     "df['code'].value_counts().plot(kind = 'bar')\n",
     "print(df.groupby('code').size().reset_index(name = 'count'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tokenize and train the dataset   \n",
+    "<br/>   \n",
+    "Here is an important and time-consuming stage. Each news sample was tokenized with 5 different korean tokenizer pakages included in KoNLPy. There must be removal step where redundant words, so called stop words, are discarded (e.g. the, a, an, ...) since they take up much space in the database even though they play counterproductive roles in extracting features."
    ]
   },
   {
@@ -393,7 +398,6 @@
     "tfidf_transformer = TfidfTransformer()\n",
     "X_train_tfidf = tfidf_transformer.fit_transform(X_train_counts)\n",
     "\n",
-    "\n",
     "#- Execute Naive bayes classifier.\n",
     "#- X_train : TF-IDF vector, y_train : label.\n",
     "clf = MultinomialNB().fit(X_train_tfidf, y_train)"
@@ -410,6 +414,13 @@
     "  data_counts = count_vect.transform(data)\n",
     "  data_tfidf = tfidf_transformer.transform(data_counts)\n",
     "  return data_tfidf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Result  "
    ]
   },
   {
@@ -521,6 +532,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All classifiers give expected result."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 83,
    "metadata": {},
@@ -600,6 +618,27 @@
     "print('4.Mecab report: \\n', metrics.classification_report(y_test4, y_pred4))\n",
     "print('5.Okt report: \\n', metrics.classification_report(y_test5, y_pred5))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Discussion and conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Reference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
