--- a/E8/FC.ipynb
+++ b/E8/FC.ipynb
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1194,7 @@
        "       12.69894979, 12.96297768])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1218,7 @@
        "        449515.92243642,  327402.87855805,  426332.71354302])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1297,7 @@
        "4  15039  100000"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1418,7 +1418,7 @@
     "    model.fit(train, y)\n",
     "    prediction = model.predict(test)\n",
     "    prediction = np.expm1(prediction)\n",
-    "    data_dir = os.getenv('HOME')+'/aiffel/kaggle_kakr_housing/data'\n",
+    "    data_dir = os.getenv('HOME')+'/aiffel/E8.kaggle-kakr-housing-data/data'\n",
     "    submission_path = join(data_dir, 'sample_submission.csv')\n",
     "    submission = pd.read_csv(submission_path)\n",
     "    submission['price'] = prediction\n",
